# Source files
set(ELONA_SOURCES
  ability.cpp
  activity.cpp
  adventurer.cpp
  ai.cpp
  animation.cpp
  area.cpp
  audio.cpp
  autopick.cpp
  blending.cpp
  browser.cpp
  buff.cpp
  building.cpp
  calc.cpp
  casino.cpp
  casino_card.cpp
  cell_draw.cpp
  chara_db.cpp
  character.cpp
  character_making.cpp
  character_status.cpp
  class.cpp
  command.cpp
  config.cpp
  config_menu.cpp
  crafting.cpp
  ctrl_file.cpp
  ctrl_inventory.cpp
  death.cpp
  debug.cpp
  deferred_event.cpp
  dialog.cpp
  dmgheal.cpp
  draw.cpp
  draw_asset.cpp
  dump_player_info.cpp
  element.cpp
  elonacore.cpp
  enchantment.cpp
  equipment.cpp
  filesystem.cpp
  fish.cpp
  food.cpp
  fov.cpp
  gdata.cpp
  get_card_info.cpp
  globals.cpp
  god.cpp
  i18n.cpp
  init.cpp
  initialize_map.cpp
  initialize_map_types.cpp
  input.cpp
  input_prompt.cpp
  item.cpp
  item_db.cpp
  item_load_desc.cpp
  item_material.cpp
  itemgen.cpp
  loading_screen.cpp
  log.cpp
  magic.cpp
  main.cpp
  main_menu.cpp
  map.cpp
  map_cell.cpp
  map_chara_filter.cpp
  map_special_events.cpp
  map_trainer_skills.cpp
  mapgen.cpp
  mef.cpp
  menu.cpp
  menu_quick_menu.cpp
  message.cpp
  message_log.cpp
  net.cpp
  quest.cpp
  race.cpp
  random.cpp
  random_event.cpp
  save.cpp
  save_update.cpp
  set_item_info.cpp
  shop.cpp
  status_ailment.cpp
  std.cpp
  talk.cpp
  talk_house_visitor.cpp
  talk_npc.cpp
  talk_unique.cpp
  tcg.cpp
  testing.cpp
  text.cpp
  trait.cpp
  turn_sequence.cpp
  turn_sequence_pc_actions.cpp
  ui.cpp
  ui_menus.cpp
  variables.cpp
  wish.cpp

  data/init.cpp
  data/types.cpp
  data/util.cpp

  lua_env/api_manager.cpp
  lua_env/config_manager.cpp
  lua_env/console.cpp
  lua_env/data_manager.cpp
  lua_env/event_manager.cpp
  lua_env/export_manager.cpp
  lua_env/handle_manager.cpp
  lua_env/i18n_manager.cpp
  lua_env/interface.cpp
  lua_env/lua_env.cpp
  lua_env/mod_manager.cpp
  lua_env/mod_manifest.cpp
  lua_env/mod_serializer.cpp
  lua_env/mod_version_resolver.cpp

  lua_env/enums/enums.cpp

  lua_env/lua_api/lua_api.cpp

  lua_env/lua_class/lua_class.cpp
  lua_env/lua_class/lua_class_ability.cpp
  lua_env/lua_class/lua_class_area.cpp
  lua_env/lua_class/lua_class_character.cpp
  lua_env/lua_class/lua_class_date_time.cpp
  lua_env/lua_class/lua_class_game_data.cpp
  lua_env/lua_class/lua_class_item.cpp
  lua_env/lua_class/lua_class_map_data.cpp
  lua_env/lua_class/lua_class_map_generator.cpp
  lua_env/lua_class/lua_class_position.cpp

  keybind/input_context.cpp
  keybind/key_names.cpp
  keybind/keybind.cpp
  keybind/keybind_actions.cpp
  keybind/keybind_deserializer.cpp
  keybind/keybind_manager.cpp
  keybind/keybind_serializer.cpp
  keybind/macro_action_queue.cpp

  mapeditor/command.cpp
  mapeditor/design_mode.cpp
  mapeditor/undo_history.cpp

  pic_loader/pic_loader.cpp
  pic_loader/tinted_buffers.cpp

  profile/profile.cpp
  profile/profile_manager.cpp
  )

add_library(elona STATIC ${ELONA_SOURCES})
